--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
 				<div class="content">
 					<h2>Electronics:</h2>
-					<p>» Trafic light projects using a PIC microcontroller.</p>
-					<p>» Elevator projects using a PIC microcontroller.</p>
+					<p>» Trafic light project using a PIC microcontroller.</p>
+					<p>» Elevator project using a PIC microcontroller.</p>
 					<p>» Microphone Preamp.</p>
 					<p>» Fixed many electronic devices.</p>
 				</div>
