--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Ammar Massaoudi</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="icon" href="images/icon.jpg" type="image/x-icon" />
+	<link rel="shortcut icon" href="images/icon.jpg"/>
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
