--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Ammar Massaoudi</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="shortcut icon" href="images/icon.png"/>
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -91,8 +90,8 @@
 
 				<div class="content">
 					<h2>Electronics:</h2>
-					<p>» Trafic light project using a PIC microcontroller.</p>
-					<p>» Elevator project using a PIC microcontroller.</p>
+					<p>» Trafic light projects using a PIC microcontroller.</p>
+					<p>» Elevator projects using a PIC microcontroller.</p>
 					<p>» Microphone Preamp.</p>
 					<p>» Fixed many electronic devices.</p>
 				</div>
@@ -105,13 +104,42 @@
 
 				</div>
 			</section>
-			<section class="spotlight">
+			<div class="content" style="text-align: center;">
+				<p>‎‎‏‏‎ ‎
+					‏‏‎ ‎
+					‏‏‎ ‎
+				</p>
+				<h6>My projects:</h6>
+			</div>
+			<section class="posts">
 
-				<div class="content">
-					<h2>My Projects:</h2>
-					<p>» Projects will be added here.</p>
+				<article>
+					<header>
+						<span class="date">March 30, 2020</span>
+						<h2>Not Google Chrome</h2>
+					</header>
+					<a class="image fit"><img src="images/cover.png" alt="" /></a>
+					<p>Not Google Chrome is the first game i've ever made,
+						it's made using the pygame module, i got the idea from
+						the google chrome's dinosaur, you can see the code down bellow
+						or you can download it if you wanna try it.
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/ammarmassaoudi/Not-Google-Chrome" class="button">See code</a>
+						</li>
+					</ul>
+					<ul class="actions special">
+						<li><a href="https://ammmarexe.itch.io/not-google-chrome" class="button">Download</a></li>
+					</ul>
+				</article>
+				<article>
 
-				</div>
+
+					<p>Other Projects will be added in this section.</p>
+
+				</article>
+
+
 			</section>
 		</section>
 
