--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</header>
 					<a class="image fit"><img src="images/cover.png" alt="" /></a>
 					<p>Not Google Chrome is the first game i've ever made,
-						it's made using the pygame module, i got the idea from
+						it's made using the pygame module, i was inspired by
 						the google chrome's dinosaur, you can see the code down bellow
 						or you can download it if you wanna try it.
 					</p>
