--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 						<span class="date">March 30, 2020</span>
 						<h2>Not Google Chrome</h2>
 					</header>
-					<a class="image fit"><img src="images/cover.png" alt="" /></a>
+					<a class="image fit"><img src="images/cover1.png" alt="" /></a>
 					<p>Not Google Chrome is the first game i've ever made,
-						it's made using the pygame module, i was inspired by
+						it's made using the pygame module, i got the idea from
 						the google chrome's dinosaur, you can see the code down bellow
 						or you can download it if you wanna try it.
 					</p>
@@ -133,10 +133,23 @@
 					</ul>
 				</article>
 				<article>
-
-
-					<p>Other Projects will be added in this section.</p>
-
+					<header>
+						<span class="date">April 4, 2020</span>
+						<h2>Protect the world</h2>
+					</header>
+					<a class="image fit"><img src="images/cover2.png" alt="" /></a>
+					<p>Protect the world is my 2nd game i made using pygame again,
+						its a game where you need to protect the world from COVID-19
+						with a soap, you can see the code down bellow
+						or you can download it if you wanna try it.
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/ammarmassaoudi/Protect-the-world" class="button">See code</a>
+						</li>
+					</ul>
+					<ul class="actions special">
+						<li><a href="https://ammmarexe.itch.io/protect-the-world" class="button">Download</a></li>
+					</ul>
 				</article>
 
 
